--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,10 @@
 #reset {
     margin-top: 10px;
 }
-
+.button {
+    text-align: left;
+    padding-left: 20px;
+}
 .button, #button0 {
     margin-left: auto;
     margin-right: auto;
@@ -80,15 +83,15 @@
 #alt > h1 {
     color: red;
     text-align: center;
-    font-size: 3em;
+    font-size: 4em;
     font-family: murphy;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .app {
     background-image: url("../images/background.jpg");
     background-size: cover;
-    background-position: center, center;
+    background-position: center 30%;
     position: relative;
     min-height: 100vh;
     font-family: korinna;
